--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.17-buster
 RUN apt update && apt install git
 
-RUN go install github.com/cosmtrek/air@latest
+RUN go install github.com/cosmtrek/air@v1.27.3
+RUN go install github.com/99designs/gqlgen@v0.13.0
 
 RUN mkdir /go/src/go-gqlgen-template
 WORKDIR /go/src/go-gqlgen-template
