--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,10 @@ services:
     ports:
       - '5001:5001'
     volumes:
-      - ./app:/go/src/go-gqlgen-template
+      - ./app:/go/src/app
+      - ./.git:/go/src/.git
+      - ./.gitignore:/go/src/.gitignore
+      - ./.editorconfig:/go/src/.editorconfig
       - pkg:/go/pkg
 volumes:
   pkg:
